@@ -594,7 +594,17 @@ void fm_app_config_load_from_key_file(FmAppConfig* cfg, GKeyFile* kf)
 
     fm_key_file_get_int(kf, "ui", "splitter_pos", &cfg->splitter_pos);
 
+#if FM_CHECK_VERSION(1, 2, 0)
+    tmp = g_key_file_get_string(kf, "ui", "side_pane_mode", NULL);
+    if (tmp && tmp[0] >= '0' && tmp[0] <= '9') /* backward compatibility */
+        tmp_int = atoi(tmp);
+    else /* portable way */
+        tmp_int = fm_side_pane_get_mode_by_name(tmp);
+    g_free(tmp);
+    if (tmp_int != FM_SP_NONE)
+#else
     if(fm_key_file_get_int(kf, "ui", "side_pane_mode", &tmp_int))
+#endif
         cfg->side_pane_mode = (FmSidePaneMode)tmp_int;
 
     /* default values for folder views */
@@ -925,7 +935,11 @@ void fm_app_config_save_profile(FmAppConfig* cfg, const char* name)
         g_string_append_printf(buf, "win_width=%d\n", cfg->win_width);
         g_string_append_printf(buf, "win_height=%d\n", cfg->win_height);
         g_string_append_printf(buf, "splitter_pos=%d\n", cfg->splitter_pos);
+#if FM_CHECK_VERSION(1, 2, 0)
+        g_string_append_printf(buf, "side_pane_mode=%s\n", fm_side_pane_get_mode_name(cfg->side_pane_mode));
+#else
         g_string_append_printf(buf, "side_pane_mode=%d\n", cfg->side_pane_mode);
+#endif
 #if FM_CHECK_VERSION(1, 0, 2)
         g_string_append_printf(buf, "view_mode=%s\n", fm_standard_view_mode_to_str(cfg->view_mode));
 #else
