@@ -67,6 +67,10 @@ Changed representing of view mode in config file: instead of numeric
     'view_mode' it is saved in portable way as string defined by widget
     FmStandardView.
 
+Changed representing of side pane mode in config file: instead of numeric
+    'side_pane_mode' it is saved in portable way as string defined by
+    widget FmSidePane.
+
 
 Changes on 1.1.0 since 1.0.1:
 
